@@ -1,3 +1,8 @@
+2003-08-26  Andrew Cagney  <cagney@redhat.com>
+
+	* i386-linux-nat.c (ps_get_thread_area): Make "desc" four "int"s
+	in size.  Add comments.
+
 2003-08-26  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* ia64-tdep.c (ia64_convert_from_func_addr): New function.
